Fix the imports from util Fixes #15

--- a/system_visualisation.ipynb
+++ b/system_visualisation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "GPTControllerMachine(model=Model(state=idle), state_field='state', current_state='idle')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -944,16 +944,16 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['general_capabilities.txt', 'grasp.txt', 'task_segmentation.txt', 'slot_fill_description_based_querry.txt', 'set_goal_predicates.txt', 'perception_classification.txt', 'task_segmentation_with_navigability.txt', 'user_input_labelling.txt'])\n",
-      "UNCERTAIN\n"
+      "QUESTION_ENV_KNOWLEDGE\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'UNCERTAIN'"
+       "'QUESTION_ENV_KNOWLEDGE'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,10 @@
     "\n",
     "print(prompt_deck.keys())\n",
     "# TODO #2 Make this work\n",
-    "chatGPT_api.request_completion(prompt_name=\"user_input_labelling.txt\", user_request=\"Hello, how are you?\")"
+    "chatGPT_api.request_completion(\n",
+    "    prompt_name=\"user_input_labelling.txt\", \n",
+    "    user_request=\"You can find a tomato in the fridge\"\n",
+    ")"
    ]
   },
   {
@@ -1003,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1015,7 @@
        "dict_keys(['kitchen.txt'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
