--- a/manual.ipynb
+++ b/manual.ipynb
@@ -5,104 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEMPORARY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['complete',\n",
-       " 'conclusion',\n",
-       " 'function_content',\n",
-       " 'function_name',\n",
-       " 'get_context',\n",
-       " 'id',\n",
-       " 'pause',\n",
-       " 'print_conclusion',\n",
-       " 'start',\n",
-       " 'start_time',\n",
-       " 'status',\n",
-       " 'stop_time',\n",
-       " 'total_time']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from gpt_controller.util.models import *\n",
-    "method_list = [method for method in dir(Task) if method.startswith('_') is False]\n",
-    "list(method_list)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# To Do\n",
-    "- [ ] make function to check a set of sentences with a predefined label through the system and see if it gives the correct output.\n",
-    "- [ ] make database folder with one .csv file for each run of the system that is saved when closing the system no matter what error occured.\n",
-    "- [ ] If the system reproduces a learned function, it should take the current context into account when adapting the function. But the decision_making context as well as the acting() context are called with the learned function context\n",
-    "- [ ] implement the process of calling a learned function. If the system starts to reproduce a learned function, whenever there is a function call comprised of a code sequence generated in a single task, tell chatGPT to adapt that function based on the current context.\n",
-    "- [ ] add simple functionality to each acting module\n",
-    "- [ ] finish `act()` function\n",
-    "- [ ] finish memorization of new task sequences\n",
-    "    - [ ] `act()` function triggers a new learning task to be added to the stack\n",
-    "    - [ ] `make_decision()` calls the finalization of the top learned task based on querrying the system if it thinks it is done with the task.\n",
-    "\n",
-    "- [ ] make prompt tester for `function_similarity.txt`.\n",
-    "\n",
-    "If time allows:\n",
-    "- [ ] Expensive but fast workaround for memorizing function calls with arguments. Instead of trying to give chatGPT the json schema of the newly created function, just save the code snippet generated and, when trying to reproduce a task that contains a function call, just run the code snippet with the adapted variables inputted by chatGPT and continue in the function task sequence with the new task.\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# To do presentation\n",
-    "\n",
-    "Use `przi presentation` https://prezi.com/p/create-prezi/\n",
-    "- [ ] make a mapping of the system\n",
-    "- [ ] 1: I wanted to approach the problem of zero-shot action generation for novel as well as known tasks.\n",
-    "- [ ] 2: chatGPT through recent works (such as microsoft and other examples of papers you read about it) has showcased reasoning capabilities through natural language based input.\n",
-    "- [ ] 3: Talk about ReAct design of the system\n",
-    "- [ ] 4: Talk about the overview state machine of the system\n",
-    "- [ ] 5: Present the cognition module and its design (give list of functions such as recalling, memorizing, as well as labelling and decision making)\n",
-    "    - Talk about the what is being leveraged on chatGPT and why.\n",
-    "- [ ] 6: Present the acting modules as a collective general concept\n",
-    "- [ ] 7: Present the memorization module and its benefits\n",
-    "- [ ] 8: Present the decision making module and its design with a focus on what is leveraged on chatGPT\n",
-    "\n",
-    "Finalize:\n",
-    "- [ ] : Optimizations that I see possible in the future are:\n",
-    "    - [ ] : Creating a pseudolanguage for the ReAct system that is more efficient for the system to parse as well as reducing token count (I think)\n",
-    "    - [ ] : Maybe using a different language model more targeted towards the context of a robotic system such as InstructGPT (although it is trained on smaller data sets)\n",
-    "    - [ ] : Using the Microsoft seen way of asking chatGPT to call a sequence of functions and save that function, if successful instead of a task sequence. Thus reducing reaction time as well as decreasing the ammount of chatGPT calls.\n",
-    "    - [ ] : And others that will be found either in the paper of the presentation or in the README of the github repository.\n",
-    "- [ ] : The way this system is made makes it fairly user friendly to extend as long as you maintain a set of rules. Some of the possible extensions are:\n",
-    "    - [ ] : Adding more acting modules to the system such as a module that can control a robotic arm or a module that can control a drone.\n",
-    "    - [ ] : Adding more cognition modules to the system such as a module that can understand images and `point` for example (using chatGPT4) or a module that can understand audio.\n",
-    "    - [ ] : Adding more decision making modules to the system such as a module that can understand the context of the conversation and make decisions based on that.\n",
-    "    - [ ] : And others that will be found either in the paper of the presentation or in the README of the github repository.\n",
-    "- [ ] : I hope that this presentation has given you a good overview of the ReAct system and I am open to any questions you might have."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# System Demo\n",
     "- Paper: Towards interactive robotics: Zero-shot action sequence generation using reasoning through ChatGPT\n",
     "- This system presents a take on a ReAct model (more info: https://react-lm.github.io/)\n",
@@ -118,36 +20,6 @@
     "pip install tts\n",
     "follow this guide to plug in text-to-speech https://www.youtube.com/watch?v=MYRgWwis1Jk\n",
     "!! call tts with gpu=True to use gpu\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Implementation"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The system works on 3 forms of LLM conversations:\n",
-    "\n",
-    "Reasoning: Where the system reasons based on its information about the environment, activity logs or other information it has access to together with its general knowledge.\n",
-    "\n",
-    "When receiving a task to fulfill, generate goal_predicates.\n",
-    "\n",
-    "The thinking process behind fulfilling a task (called _end goal_) is as follows:\n",
-    "- Step 1: Load knowledge about its own activity up until that point (not extremely detailed ones, just conclusions of thought processes)\n",
-    "- Step 2: Define the next step to take based on the current state of the environment (Perceive, Reason, Act, Communicate)\n",
-    "- Step 3: Load functionality for any of the type of actions.\n",
-    "- Step 4: Call the functionality using chatGPT with the task goal being the goal defined at step 2.\n",
-    "- Step 5: After the call completes, save the new state of the environment and the new activity log independent of the action's success.\n",
-    "- Step 6: \n",
-    "    - If the action was successful, check if the end goal was reached by evaluating goal predicates. \n",
-    "    - Else, repeat from step 1."
    ]
   },
   {
@@ -180,48 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Manipulation\n",
-    "\n",
-    "- Limitations:\n",
-    "  - Objects that have the attribute \"is_accessible\" set to true make the contained objects graspable.\n",
-    "- Policy:\n",
-    "  - To take an object from within another object you must recursively reach that object from the top most container object to the object that contains the required object.\n",
-    "  - If any object in the sequence fails to be accessed, give context as to which object is not accessible and why."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Perception\n",
-    "\n",
-    "- Through perception you can find an object that you do not have yet in memory.\n",
-    "- You can also do specific checks on objects"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reasoning"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Prompts"
+    "## Testing chatGPT"
    ]
   },
   {
@@ -583,14 +414,6 @@
     "completion = machine.process(conversation.messages)\n",
     "print(completion['content'])\n",
     "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Goal predicate generation"
    ]
   },
   {
